--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npm install --legacy-peer-deps && npx update-browserslist-db@latest && npm audit fix && npm run build"
   functions = "netlify/functions"
   publish = "dist"
 
